@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model Excerpt - US03

class PoliticalAgent {
    name
    email
}

class Organization {
    name
}

enum OrganizationType {
    COMPANY
    POLITICAL_PARTY
    FOUNDATION
    INSTITUTE
    ASSOCIATION
}

PoliticalAgent "1" -- "*" Organization : lists >

Organization "*" -- "1" OrganizationType : classified as

@enduml
